--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </p>
           <div class="mt-10 flex items-center justify-center gap-x-6">
             <a
-              href="#"
+              href="https://tailwindcss.com/"
               class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow hover:bg-indigo-500"
               >Get started</a
             >
