--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
     <header class="fixed inset-x-0 top-0 z-50 bg-white shadow-sm">
         <nav class="flex items-center justify-between p-4 lg:p-6 lg:px-8">
             <div class="flex items-center gap-3">
-                <a href="#" class="-m-1.5 p-1.5 inline-flex items-center gap-3">
+                <!-- <a href="#" class="-m-1.5 p-1.5 inline-flex items-center gap-3">
                     <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-shopify-bag-small-58b8dcfc6d4d49dcde228b8a236503d0f1e4db04f8c23f04b7416d4e9e5b07dc.png"
                         alt="logo" class="h-8 w-auto" />
-                    <!-- <span class="font-semibold text-gray-900">Somanshu — Shopify Dev</span> -->
-                </a>
+                    <span class="font-semibold text-gray-900">Somanshu — Shopify Dev</span> -->
+                <!-- </a> -->
             </div>
 
             <div class="hidden lg:flex lg:gap-x-6 lg:items-center">
