--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
             <div class="hidden lg:flex lg:gap-x-6 lg:items-center">
                 <a href="#features" class="text-sm font-medium text-gray-700 hover:text-accent">Features</a>
-                <a href="#portfolio" class="text-sm font-medium text-gray-700 hover:text-accent">Portfolio</a>
+                <a href="#pastprojects" class="text-sm font-medium text-gray-700 hover:text-accent">Portfolio</a>
                 <a href="#process" class="text-sm font-medium text-gray-700 hover:text-accent">Process</a>
                 <a href="#pricing" class="text-sm font-medium text-gray-700 hover:text-accent">Pricing</a>
                 <a href="#faq" class="text-sm font-medium text-gray-700 hover:text-accent">FAQ</a>
@@ -510,7 +510,7 @@
 
 
                 <!-- Past Projects Grid -->
-                <section id="past-projects" class="scroll-offset bg-white py-20 sm:py-24">
+                <section id="pastprojects" class="scroll-offset bg-white py-20 sm:py-24">
                     <div class="mx-auto lg-fix-max-width px-6 lg:px-8">
                         <div class="mx-auto max-w-2xl text-center">
                             <h2 class="text-base font-semibold text-accent">Past Projects</h2>
@@ -528,7 +528,7 @@
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
                                 <img src="images\1.png" alt="Project 1"
-                                    class="w-full aspect-video object-cover transition-transform duration-300" />
+                                    class="w-full aspect-video object-cover transition-transform duration-500" />
                             </figure>
 
                             <figure
