--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
             transform: translateY(0);
         }
     </style>
+    
 </head>
 
 <body class="bg-white text-gray-800">
@@ -668,7 +669,7 @@
 
 
                 <!-- Process -->
-                <section id="process" class="scroll-offset bg-white py-20 sm:py-24">
+                <section id="process" class="scroll-offset bg-white  py-20 sm:py-24">
                     <div class="mx-auto lg-fix-max-width px-6 lg:px-8">
                         <div class="mx-auto max-w-2xl text-center">
                             <h2 class="text-base font-semibold text-accent">Process</h2>
@@ -818,8 +819,7 @@
                         <div class="px-8 pt-8 pb-3 sm:px-10 sm:pt-10 sm:pb-0">
                             <p class="mt-2 text-lg font-medium tracking-tight text-white max-lg:text-center">Mobile
                                 friendly</p>
-                            <p class="mt-2 max-w-lg text-sm/6 text-gray-400 max-lg:text-center">Anim aute id magna
-                                aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-200 max-lg:text-center">With most shoppers buying directly from their phones, we build responsive Shopify websites that look flawless on every device.</p>
                         </div>
                         <div class="@container relative min-h-120 w-full grow max-lg:mx-auto max-lg:max-w-sm">
                             <div
@@ -840,8 +840,7 @@
                         <div class="px-8 pt-8 sm:px-10 sm:pt-10">
                             <p class="mt-2 text-lg font-medium tracking-tight text-white max-lg:text-center">Performance
                             </p>
-                            <p class="mt-2 max-w-lg text-sm/6 text-gray-400 max-lg:text-center">Lorem ipsum, dolor sit
-                                amet consectetur adipisicing elit maiores impedit.</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-200 max-lg:text-center">Our development process prioritizes speed with clean code, image optimization, and Core Web Vitals improvements so your pages load in seconds..</p>
                         </div>
                         <div
                             class="flex flex-1 items-center justify-center px-8 max-lg:pt-10 max-lg:pb-12 sm:px-10 lg:pb-2">
@@ -859,8 +858,7 @@
                         <div class="px-8 pt-8 sm:px-10 sm:pt-10">
                             <p class="mt-2 text-lg font-medium tracking-tight text-white max-lg:text-center">Security
                             </p>
-                            <p class="mt-2 max-w-lg text-sm/6 text-gray-400 max-lg:text-center">Morbi viverra dui mi
-                                arcu sed. Tellus semper adipiscing suspendisse semper morbi.</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-200 max-lg:text-center">Security is baked in with SSL, Shopify best practices, and safe integrations to protect your customer's data.</p>
                         </div>
                         <div class="@container flex flex-1 items-center max-lg:py-6 lg:pb-2">
                             <img src="https://tailwindcss.com/plus-assets/img/component-images/dark-bento-03-security.png"
@@ -876,23 +874,23 @@
                         class="relative flex h-full flex-col overflow-hidden rounded-[calc(var(--radius-lg)+1px)] max-lg:rounded-b-[calc(2rem+1px)] lg:rounded-r-[calc(2rem+1px)]">
                         <div class="px-8 pt-8 pb-3 sm:px-10 sm:pt-10 sm:pb-0">
                             <p class="mt-2 text-lg font-medium tracking-tight text-white max-lg:text-center">Powerful
-                                APIs</p>
-                            <p class="mt-2 max-w-lg text-sm/6 text-gray-400 max-lg:text-center">Sit quis amet rutrum
-                                tellus ullamcorper ultricies libero dolor eget sem sodales gravida.</p>
+                                Design</p>
+                            <p class="mt-2 max-w-lg text-sm/6 text-gray-200 max-lg:text-center ">Combined with conversion-focused layouts, powerful APIs, and scalable architecture, we deliver Shopify stores that not only perform at their best but also drive consistent growth.</p>
                         </div>
                         <div class="relative min-h-120 w-full grow">
                             <div
                                 class="absolute top-10 right-0 bottom-0 left-10 overflow-hidden rounded-tl-xl bg-gray-900/60 outline outline-white/10">
                                 <div class="flex bg-gray-900 outline outline-white/5">
-                                    <div class="-mb-px flex text-sm/6 font-medium text-gray-400">
+                                    <div class="-mb-px flex text-sm/6 font-medium text-white">
                                         <div
                                             class="border-r border-b border-r-white/10 border-b-white/20 bg-white/5 px-4 py-2 text-white">
-                                            NotificationSetting.jsx</div>
-                                        <div class="border-r border-gray-600/10 px-4 py-2">App.jsx</div>
+                                            Customer Support</div>
+                                        <div class="border-r border-gray-600/10 px-4 py-2">Top-Notch</div>
                                     </div>
                                 </div>
-                                <div class="px-6 pt-6 pb-14">
+                                <div class="px-6 pt-6 pb-14 text-gray-200">
                                     <!-- Your code example -->
+                                     We believe building your Shopify store is just the beginning. Our dedicated customer support ensures you’re never left stuck — whether it’s troubleshooting, theme adjustments, or scaling your store. We offer 30 days of free post-launch support with every project and flexible retainers for long-term growth. Quick responses, clear communication, and reliable solutions are what make our clients trust us as their go-to Shopify partner.
                                 </div>
                             </div>
                         </div>
@@ -910,7 +908,7 @@
     <!-- Pricing -->
     <section id="pricing" class="scroll-offset bg-gray-900 px-6 py-16 sm:py-20 lg:px-8">
         <div class="mx-auto max-w-4xl text-center">
-            <h2 class="text-base font-semibold text-accent">Pricing</h2>
+            <h2 class="text-white text-base font-semibold text-accent">Pricing</h2>
             <p class="mt-2 text-3xl md:text-4xl font-bold tracking-tight text-white">Simple, transparent plans</p>
             <p class="mx-auto mt-4 max-w-2xl text-gray-300">Start with an audit or choose the full rebuild — clear
                 deliverables, clear pricing.</p>
@@ -926,7 +924,8 @@
                         <li>App & theme recommendations</li>
                     </ul>
                     <div class="mt-6"><a href="#cta" class="inline-block rounded-md px-4 py-2 btn-accent">Get
-                            Audit</a></div>
+                            Audit</a>
+                        </div>
                 </div>
                 <div class="pricing-glow rounded-3xl bg-white/5 p-6 ring-1 ring-white/10">
                     <h3 class="text-lg font-semibold text-accent">Full Rebuild</h3>
@@ -1038,8 +1037,8 @@
             <div class="flex flex-col gap-8 md:flex-row md:items-center md:justify-between">
                 <div>
                     <div class="flex items-center gap-3">
-                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-shopify-bag-small-58b8dcfc6d4d49dcde228b8a236503d0f1e4db04f8c23f04b7416d4e9e5b07dc.png"
-                            alt="logo" class="h-8" />
+                        <!-- <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-shopify-bag-small-58b8dcfc6d4d49dcde228b8a236503d0f1e4db04f8c23f04b7416d4e9e5b07dc.png"
+                            alt="logo" class="h-8" /> -->
                         <span class="font-semibold text-white">Somanshu — Shopify Dev</span>
                     </div>
                     <p class="mt-3 text-sm text-gray-400">I build fast, conversion-focused Shopify stores for brands
