--- a/index.html
+++ b/index.html
@@ -487,39 +487,41 @@
                 <!-- Grid cards -->
                 <div class="mt-16 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
                     <!-- Card -->
-                    <div class="rounded-2xl bg-white p-8 shadow hover:shadow-lg transition-shadow">
-                        <h3 class="text-lg font-semibold text-gray-900">Custom themes & sections</h3>
-                        <p class="mt-3 text-sm text-gray-600">Pixel-perfect themes built to match your brand and convert
+                   
+
+                    <div class="rounded-2xl bg-white p-8 shadow hover:bg-gray-900 hover:text-white transition-all">
+  <h3 class="text-lg font-semibold">Custom themes & sections</h3>
+                        <p class="mt-3 text-sm">Pixel-perfect themes built to match your brand and convert
                             visitors into customers.</p>
                     </div>
 
-                    <div class="rounded-2xl bg-white p-8 shadow hover:shadow-lg transition-shadow">
-                        <h3 class="text-lg font-semibold text-gray-900">Speed & performance</h3>
-                        <p class="mt-3 text-sm text-gray-600">Audits, optimizations and theme improvements for blazing
+                    <div class="rounded-2xl bg-white p-8 shadow hover:bg-gray-900 hover:text-white transition-all">
+  <h3 class="text-lg font-semibold">Speed & performance</h3>
+                        <p class="mt-3 text-sm">Audits, optimizations and theme improvements for blazing
                             fast load times.</p>
                     </div>
 
-                    <div class="rounded-2xl bg-white p-8 shadow hover:shadow-lg transition-shadow">
-                        <h3 class="text-lg font-semibold text-gray-900">Conversion-focused product pages</h3>
-                        <p class="mt-3 text-sm text-gray-600">Optimized product layouts, trust signals, and
+                    <div class="rounded-2xl bg-white p-8 shadow hover:bg-gray-900 hover:text-white transition-all">
+  <h3 class="text-lg font-semibold">Conversion-focused product pages</h3>
+                        <p class="mt-3 text-sm">Optimized product layouts, trust signals, and
                             call‑to‑actions that increase add‑to‑cart rates.</p>
                     </div>
 
-                    <div class="rounded-2xl bg-white p-8 shadow hover:shadow-lg transition-shadow">
-                        <h3 class="text-lg font-semibold text-gray-900">Checkout & cart optimization</h3>
-                        <p class="mt-3 text-sm text-gray-600">Frictionless checkout flows and smart upsells to reduce
+                    <div class="rounded-2xl bg-white p-8 shadow hover:bg-gray-900 hover:text-white transition-all">
+  <h3 class="text-lg font-semibold">Checkout & cart optimization</h3>
+                        <p class="mt-3 text-sm">Frictionless checkout flows and smart upsells to reduce
                             abandonment and boost revenue.</p>
                     </div>
 
-                    <div class="rounded-2xl bg-white p-8 shadow hover:shadow-lg transition-shadow">
-                        <h3 class="text-lg font-semibold text-gray-900">SEO & migrations</h3>
-                        <p class="mt-3 text-sm text-gray-600">Safe migrations and SEO improvements so you keep and grow
+                    <div class="rounded-2xl bg-white p-8 shadow hover:bg-gray-900 hover:text-white transition-all">
+  <h3 class="text-lg font-semibold">SEO & migrations</h3>
+                       <p class="mt-3 text-sm">Safe migrations and SEO improvements so you keep and grow
                             organic traffic.</p>
                     </div>
 
-                    <div class="rounded-2xl bg-white p-8 shadow hover:shadow-lg transition-shadow">
-                        <h3 class="text-lg font-semibold text-gray-900">Post‑launch support</h3>
-                        <p class="mt-3 text-sm text-gray-600">30 days included with rebuilds and ongoing retainers for
+                    <div class="rounded-2xl bg-white p-8 shadow hover:bg-gray-900 hover:text-white transition-all">
+  <h3 class="text-lg font-semibold">Post‑launch support</h3>
+                        <p class="mt-3 text-sm">30 days included with rebuilds and ongoing retainers for
                             long‑term growth.</p>
                     </div>
                 </div>
