--- a/index.html
+++ b/index.html
@@ -548,70 +548,83 @@
 
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\1.png" alt="Project 1"
+                                <img src="images/1.png" alt="Project 1"
+                                loading="lazy"
+                                
                                     class="w-full aspect-video object-cover transition-transform duration-500" />
                             </figure>
 
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\2.png" alt="Project 2"
+                                <img src="images/2.png" alt="Project 2"
+                                loading="lazy"
+                                
                                     class="w-full aspect-video object-cover transition-transform duration-300" />
                             </figure>
 
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\3.png" alt="Project 3"
+                                <img src="images/3.png" alt="Project 3"
                                     class="w-full aspect-video object-cover transition-transform duration-300" />
                             </figure>
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\4.png" alt="Project 4"
-                                    class="w-full aspect-video object-cover transition-transform duration-300" />
-                            </figure>
-
-                            <figure
-                                class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\5.png" alt="Project 5"
+                                <img src="images/4.png" 
+                                loading="lazy" alt="Project 4"
                                     class="w-full aspect-video object-cover transition-transform duration-300" />
                             </figure>
 
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\6.png" alt="Project 6"
-                                    class="w-full aspect-video object-cover transition-transform duration-300" />
-                            </figure>
-                            <figure
-                                class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\7.png" alt="Project 7"
+                                <img src="images/5.png" alt="Project 5"
+                                loading="lazy"
                                     class="w-full aspect-video object-cover transition-transform duration-300" />
                             </figure>
 
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\8.png" alt="Project 8"
+                                <img src="images/6.png" alt="Project 6"
+                                loading="lazy"
+                                    class="w-full aspect-video object-cover transition-transform duration-300" />
+                            </figure>
+                            <figure
+                                class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
+                                <img src="images/7.png" alt="Project 7"
+                                loading="lazy"
                                     class="w-full aspect-video object-cover transition-transform duration-300" />
                             </figure>
 
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\9.png" alt="Project 9"
-                                    class="w-full aspect-video object-cover transition-transform duration-300" />
-                            </figure>
-                            <figure
-                                class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\10.png" alt="Project 10"
+                                <img src="images/8.png" alt="Project 8"
+                                loading="lazy"
                                     class="w-full aspect-video object-cover transition-transform duration-300" />
                             </figure>
 
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\11.png" alt="Project 11"
+                                <img src="images/9.png" alt="Project 9"
+                                loading="lazy"
+                                    class="w-full aspect-video object-cover transition-transform duration-300" />
+                            </figure>
+                            <figure
+                                class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
+                                <img src="images/10.png" alt="Project 10"
+                                loading="lazy"
                                     class="w-full aspect-video object-cover transition-transform duration-300" />
                             </figure>
 
                             <figure
                                 class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
-                                <img src="images\12.png" alt="Project 12"
+                                <img src="images/11.png" alt="Project 11"
+                                loading="lazy"
+                                    class="w-full aspect-video object-cover transition-transform duration-300" />
+                            </figure>
+
+                            <figure
+                                class="portfolio-figure reveal-mask rounded-xl overflow-hidden shadow-lg cursor-pointer">
+                                <img src="images/12.png" alt="Project 12"
+                                loading="lazy"
                                     class="w-full aspect-video object-cover transition-transform duration-300" />
                             </figure>
                             <!-- Add more figures as needed -->
