--- a/index.html
+++ b/index.html
@@ -1188,6 +1188,23 @@
             </div>
         </div>
     </footer>
+
+    <!-- Sticky Contact Button -->
+<!-- Sticky Contact Button (Mobile Only) -->
+<!-- Sticky Contact Button (Mobile Only - Bottom Right) -->
+<!-- Sticky Contact Button (Mobile Only - Bottom Right) -->
+<!-- Sticky Contact Button (Mobile Only - Top Right) -->
+<a href="#contact"
+   class="fixed top-20 right-6 z-50 flex items-center justify-center w-14 h-14 rounded-full bg-gray-200 text-white shadow-lg lg:hidden hover:scale-105 transition transform">
+   📞 
+</a>
+
+
+
+
+   ✉️
+</a>
+
     <script>
        
         // Footer year
